upgrade mixednutz-java-api, add collaborated by user